--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "gatsby": "^5.13.3",
     "gatsby-adapter-netlify": "^1.1.3",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-source-contentful": "^8.13.2",
+    "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
