--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "plop": "plop"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.22.11",
     "gatsby": "^5.13.3",
     "gatsby-adapter-netlify": "^1.1.3",
     "gatsby-plugin-image": "^3.13.1",
