--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "footerLinks": [
     {
-      "subTitle": "Reynolds Interiors | Sturminster Newton, Dorest",
+      "subTitle": "Reynolds Interiors | Sturminster Newton, Dorset",
       "links": [
         {
           "text": "Home",
