Add Ceramics and Glass page

--- a/src/config copy.json
+++ b/src/config copy.json
@@ -30,6 +30,10 @@
             {
               "menuLabel": "Art",
               "menuLink": "/art"
+            },
+            {
+              "menuLabel": "Ceramics & Glass",
+              "menuLink": "/ceramics"
             }
           ]
         }
@@ -62,6 +66,10 @@
     {
       "menuLabel": "Art",
       "menuLink": "/art"
+    },
+    {
+      "menuLabel": "Ceramics & Glass",
+      "menuLink": "/ceramics"
     }
   ]
 }
